# algorithm-skill-check-one-starter

./: README.md
exam/: gatorgrade.yml  pyproject.toml
exam/questions/: question_one.py
exam/tests/: test_question_one.py
insight/: insight-report-20250124-08-28-57.json  insight-report-20250124-08-32-27.json  insight-report-20250124-08-36-35.json
