[tool.poetry]
name = "skillcheckone"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
symbex = "^1.4"
pytest-json-report = "^1.5.0"
pytest = "^8.3.3"
execexam = "^0.3.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
types-pyyaml = "^6.0.12.20240917"
taskipy = "^1.14.1"
ruff = "^0.9.2"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
enable_assertion_pass_hook = true

[tool.ruff]
line-length = 79
lint.ignore = [
    "E501", # do not check line length
]
lint.select = [
    "E",    # pycodestyle errors
    "I",    # isort
    "F",    # Pyflakes
    "PL",   # pylint
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific
    "W",    # pycodestyle warnings
    "T201"  # flake8-print
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
